# my_spot

./: CMakeLists.txt  README.md  package.xml
config/: my_spot_control.yaml
launch/: my_spot_control.launch  my_spot_world.launch
src/: execute_move_robot  move_robot.cpp
urdf/: leg.xacro  my_spot.gazebo  my_spot.urdf  my_spot.xacro  property_variables.xacro
